fix dark mode color for math
fixes: https://forums.zotero.org/discussion/113737/zotero-7-beta-wrong-dark-mode-color-in-math-editor-of-a-note

--- a/src/stylesheets/components/core/_math.scss
+++ b/src/stylesheets/components/core/_math.scss
@@ -3,11 +3,12 @@
 
 .math-node.empty-math .math-render::before {
 	content: "Click to insert LaTex ...";
-    color: black;
+	color: var(--fill-secondary);
 }
 
 .math-node .math-render.parse-error::before {
 	content: "Cannot parse LaTeX.";
+	color: var(--accent-red);
 	cursor: help;
 }
 
