--- a/src/stylesheets/components/core/_prosemirror-math.scss
+++ b/src/stylesheets/components/core/_prosemirror-math.scss
@@ -32,7 +32,7 @@
 
 .math-node .math-src {
 	display: none;
-	color: rgb(132, 33, 162);
+	color: var(--tag-magenta);
 	tab-size: 4;
 }
 
