--- a/src/stylesheets/themes/_dark.scss
+++ b/src/stylesheets/themes/_dark.scss
@@ -38,6 +38,7 @@ $-colors: (
     color-scrollbar: rgb(117, 117, 117),
     color-scrollbar-hover: rgb(158, 158, 158),
     color-scrollbar-background: transparent,
+    tag-magenta: #e56eeed9,
 );
 
 @mixin -dark-rules() {
