--- a/src/stylesheets/themes/_light.scss
+++ b/src/stylesheets/themes/_light.scss
@@ -38,6 +38,7 @@ $-colors: (
     color-scrollbar: rgb(194, 194, 194),
     color-scrollbar-hover: rgb(125, 125, 125),
     color-scrollbar-background: transparent,
+    tag-magenta: #e56eee,
 );
 
 @mixin -light-rules() {
